# django-real-estate

./: .gitignore  pyproject.toml  setup.cfg
real_estate/: .env.example  manage.py  requirements.txt
real_estate/profiles/: admin.py  apps.py  models.py  signals.py
real_estate/profiles/migrations/: 0001_initial.py  0002_alter_profile_profile_photo.py
real_estate/ratings/: admin.py  models.py  serializers.py
real_estate/ratings/migrations/: 0001_initial.py
real_estate/real_estate/: settings.py  urls.py  wsgi.py
real_estate/real_estate/settings/: base.py  dev.py
real_estate/users/: admin.py  forms.py  managers.py  models.py  serializers.py
real_estate/users/migrations/: 0001_initial.py
