[tool.poetry]
name = "django-real-estate"
version = "0.1.0"
description = ""
authors = ["markdunn72 <markdunn2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.7.2"
black = "24.2.0"
click = "8.1.7"
django = "5.0.2"
django-autoslug = "1.9.9"
django-countries = "7.5.1"
django-environ = "0.11.2"
django-filter = "23.5"
django-phonenumber-field = "7.3.0"
djangorestframework = "3.14.0"
flake8 = "7.0.0"
isort = "5.13.2"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
packaging = "23.2"
pathspec = "0.12.1"
phonenumbers = "8.13.30"
pillow = "10.2.0"
platformdirs = "4.2.0"
psycopg2-binary = "2.9.9"
pycodestyle = "2.11.1"
pyflakes = "3.2.0"
pytz = "2024.1"
sqlparse = "0.4.4"
typing-extensions = "4.9.0"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
